--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.futurum</groupId>
 	<artifactId>excercise</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>INDEV</version>
 	<name>excercise</name>
 	<description>Recruitment excercise for Futurum company</description>
 	<url/>
