--- a/.github/workflows/main_futurumexcercise.yml
+++ b/.github/workflows/main_futurumexcercise.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: excercise
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/backend/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,7 +49,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: excercise
-      
+          path: ./downloaded-artifacts
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
