--- a/.github/workflows/main_futurumexcercise.yml
+++ b/.github/workflows/main_futurumexcercise.yml
@@ -28,6 +28,9 @@ jobs:
         working-directory: ./backend
         run: mvn clean install
 
+      - name: List files in target directory
+        run: ls -al ./backend/target/
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -49,12 +52,15 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: excercise
+          path: ./downloaded-artifacts
 
       - name: Display environment variables for debugging
         run: printenv
 
       - name: List files in downloaded artifacts directory
-        run: ls -al ./downloaded-artifacts
+        run: |
+          echo "Listing files in downloaded artifacts directory:"
+          ls -al ./downloaded-artifacts
 
       - name: Login to Azure
         uses: azure/login@v2
