--- a/.github/workflows/main_futurumexcercise.yml
+++ b/.github/workflows/main_futurumexcercise.yml
@@ -65,6 +65,9 @@ jobs:
           name: spring-boot-app
           path: ./downloaded-artifacts
 
+      - name: Verify downloaded artifacts
+        run: ls -al ./downloaded-artifacts
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -78,4 +81,4 @@ jobs:
         with:
           app-name: 'FuturumExcercise'
           slot-name: 'Production'
-          package: './downloaded-artifacts/*.jar'
+          package: './downloaded-artifacts'
