--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.hibernate.ddl-auto=none
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/swagger-ui
+
+# Static files configuration
+spring.resources.static-locations=classpath:/static/
