--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,4 +21,4 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/swagger-ui
 
 # Static files configuration
-spring.resources.static-locations=classpath:/static/
+spring.resources.static-locations=classpath:/static/,classpath:/public/,classpath:/resources/,classpath:/META-INF/resources/
