--- a/.github/workflows/main_futurumexcercise.yml
+++ b/.github/workflows/main_futurumexcercise.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm install
 
       - name: Build Angular project
-        run: npm run build --prod
+        run: npm run build
 
       - name: Update paths in index.html
         run: |
